Fix h1-h6 not showing correctly
in editor

--- a/src/index.css
+++ b/src/index.css
@@ -30,4 +30,31 @@
   .rdw-option-active {
     border: 1px solid black;
   }
+  .wrapperClassName h1 {
+    font-size: 32px;
+    font-weight: bold;
+  }
+  .wrapperClassName h2 {
+    font-size: 24px;
+    font-weight: bold;
+  }
+  .wrapperClassName h3 {
+    font-size: 18.72px;
+    font-weight: bold;
+  }
+  .wrapperClassName h4 {
+    font-size: 16px;
+    font-weight: bold;
+  }
+  .wrapperClassName h5 {
+    font-size: 13.28px;
+    font-weight: bold;
+  }
+  .wrapperClassName h6 {
+    font-size: 12px;
+    font-weight: bold;
+  }
+  .wrapperClassName {
+    line-height: 1;
+  }
 }
